# Netgear-AV-MCP

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/mcp_server/: server.py
src/mcp_server/ssh/: __init__.py  auth.py  client.py
src/mcp_server/tools/: cli.py  core.py  lldp.py  poe.py  ports.py  routing.py  spantree.py  vlan.py
tests/: test_prompts.py  test_resources.py  test_server.py  test_ssh_auth.py  test_ssh_client.py  test_tools.py
